--- a/src/assets/styles/cert.css
+++ b/src/assets/styles/cert.css
@@ -106,14 +106,26 @@ box-shadow: 0px 0px 0px 10px #fff; */
 .date_signature{
     display: flex;
     justify-content: space-evenly;
-    margin-top: 80px;
+    align-items: center;
+    margin-top: 50px;
 }
 
 .sig_space{
     display: block;
         border-bottom-style: solid !important;
-    border-bottom: 1px solid #000
+    border-bottom: 1px solid #000;
+    height: 30px;
+    
 }
+
+.sig_space img{
+    image-resolution: 300dpi snap;
+}
+
+.cert_date{
+    vertical-align: bottom;
+}
+
 
 .authorizer{
     font-size: 12px;
