--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -107,9 +107,17 @@ label[data-shrink="false"]
 
 
 /* Text component */
+.textContainer h1{
+  font-weight: 500;
+  font-size: 35px;
+  padding: 0;
+  text-align: center;
+  margin: 0;
+}
 .textContainer h3{
   font-weight: 400;
   padding: 0;
+  font-size: 18px;
 }
 
 .error{
